# decisionops-ai

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: user-research.yml
.github/workflows/: ci.yml  pages.yml
artifacts/: eval_report.json
data/demo/: merchant_snapshots.json  settlement_cases.json
docs/: PRD.md  eval_history.md  index.html
docs/assets/: app.js  style.css
docs/data/: merchants.json  overview.json  settlement.json
docs/research/: desk_research.csv  interview_guide.md  interview_log.csv  recruitment_copy.md  synthesis.md  synthetic_panel.csv  synthetic_panel_findings.md
scripts/: build_real_datasets.py  run_evals.py
src/decisionops/: __init__.py  api.py  citations.py  cli.py  data.py  growth_agent.py  providers.py  schemas.py  settlement_agent.py
tests/: test_agents.py  test_api.py
